swagger added to url apis
