# api/routes/setup.go
@@ -12,7 +12,7 @@ func SetupRoutes(app *fiber.App, jwt *fiber.Handler) {
 	app.Delete("/api/v1/user/:username", *jwt, DeleteUserByUserName)
 
 	// Url
-	app.Post("/api/v1/shorten", *jwt, ShortenUrl)
+	app.Post("/api/v1/urls/shorten", *jwt, ShortenUrl)
 	app.Get("/api/v1/urls", *jwt, ListUrls)
 	app.Delete("/api/v1/urls", *jwt, DeleteShortByUrl)
 	app.Get("/:short", *jwt, ResolveUrl)
